# fzfrunner

./: CMakeLists.txt  README.md  build.sh  metadata.json  org.kde.krunner.fzfrunner.desktop
config/: krunner-fzf-settings
extends/: aosp-find-repo.sh  fzf_config_template.sh  fzf_find_files.sh  fzf_find_files_under.sh  fzf_find_repos.sh  sing-box_switch.sh  terminal_open.sh  tmux_session.sh  vscode_recent.sh
src/: CommandDefinition.h  CommandRunner.cpp  CommandRunner.h  ConfigManager.cpp  ConfigManager.h  CustomeActionCmd.cpp  CustomeActionCmd.h  ResultHandler.cpp  ResultHandler.h  ScriptBuilder.cpp  ScriptBuilder.h
